--- a/jBGG/pom.xml
+++ b/jBGG/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
-   <groupId>bgg-api</groupId>
    <artifactId>bgg-api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <repositories>
@@ -33,4 +32,5 @@
          <version>1.2.17</version>
       </dependency>
    </dependencies>
+   <groupId>org.kerf.bgg</groupId>
 </project>
